log
Wed, May 14, 2025  8:33:45 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025  8:35:21 AM: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:70:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
cc1.exe: all warnings being treated as errors
cfa6f73
Wed, May 14, 2025  8:35:51 AM: 
 sudoku.c | 14 --------------
 1 file changed, 14 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k;
             ^
sudoku.c:54:11: error: unused variable 'new' [-Werror=unused-variable]
     Node* new;
           ^~~
cc1.exe: all warnings being treated as errors
63a7dfa
Wed, May 14, 2025  8:37:37 AM: 
 sudoku.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
c900e95
Wed, May 14, 2025  8:40:01 AM: 
 sudoku.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:21: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                     add(list, new);
                     ^~~
cc1.exe: all warnings being treated as errors
143bb2f
Wed, May 14, 2025  8:44:49 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a5cc8dd
Wed, May 14, 2025  8:47:11 AM: 
 sudoku.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
 tests:  5|3
total_score: 35/70
30a3bef
